--- a/www/install/header.html
+++ b/www/install/header.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Newznab Installatione</title>
+<title>Newznab Installation Checks</title>
 <link rel="stylesheet" href="install.css" type="text/css" />
 
 </head>
